@@ -4,7 +4,9 @@ Changelog
 1.2.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Change form tab style selectors from '#content' to '#content-core' so form
+  tabs work in both content and overlays.
+  [davidjb]
 
 
 1.2.4 (2012-05-07)
